# LiveEdge

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/: README.md
scripts/: baseline_cluster_accuracy.py  cattle_generalization_study.py  dl_cluster_accuracy.py  k_sensitivity_and_error_analysis.py  recalculate_energy_unified.py  related_work_comparison.py  traditional_ml_comparison.py  verified_simulation.py
scripts/figures/: __init__.py  ablation_energy.py  confusion_matrix.py  create_architecture.py  dwell_time_dist.py  f1_vs_odr.py  generate_paper_figures_v2.py  k_sensitivity.py  odr_trajectory.py  pareto_curve.py
scripts/utils/: __init__.py  cluster_mapping.py
src/liveedge/: __init__.py
src/liveedge/clustering/: __init__.py  clustering.py  feature_extraction.py  validation.py
src/liveedge/data/: __init__.py  dataset.py  features.py  features_24.py  filters.py  pig_dataset.py  preprocessing.py  transforms.py
src/liveedge/energy/: __init__.py  adaptive_transmission.py  hardware.py  models.py  power_decomposition.py  real_hardware.py  visualization.py
src/liveedge/evaluation/: __init__.py  classification.py  energy.py  reconstruction.py  system.py
src/liveedge/models/: __init__.py  base.py  cnn.py  factory.py  tcn.py  traditional.py
src/liveedge/sampling/: __init__.py  fsm.py  interpolation.py
src/liveedge/sampling/policies/: __init__.py  base.py  drl.py  fixed.py  optimization.py  rule_based.py
src/liveedge/simulation/: __init__.py  environment.py  runner.py
src/liveedge/utils/: __init__.py  config.py  logging.py  seed.py  visualization.py
tests/: conftest.py  test_energy.py  test_features.py  test_models.py  test_preprocessing.py  test_sampling.py
